# DemoGameEngine

./: .gitignore  CMakeLists.txt  build.sh  build_debug.sh
engine/: CMakeLists.txt
engine/src/: app.cpp  app.h  camera_component.cpp  camera_component.h  common.h  component.cpp  component.h  engine.cpp  engine.h  engine_includes.h  fs.cpp  fs.h  game_object.cpp  game_object.h  graphics_api.cpp  graphics_api.h  input.cpp  input.h  light_component.cpp  light_component.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_component.cpp  mesh_component.h  player_controller_component.cpp  player_controller_component.h  render_queue.cpp  render_queue.h  scene.cpp  scene.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h  vertex_layout.h
src/: game.cpp  game.h  main.cpp  test_object.cpp  test_object.h
